# deep-learning-web-rs

./: .env.example  .gitignore  Cargo.toml  README.md
backend/: main.rs  schema.rs
backend/models/todos/: generated.rs
backend/services/: file.rs  mod.rs
frontend/: .gitignore  package.json
frontend/bundles/: index.tsx
frontend/src/: App.tsx  dev.tsx
frontend/src/containers/: Files.tsx
frontend/src/pages/: FaceDetection.tsx  Home.tsx  ObjectDetection.tsx
frontend/src/types/: rust.d.ts
migrations/00000000000003_plugin_auth/: down.sql  up.sql
migrations/00000000000004_plugin_storage/: down.sql  up.sql
