[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "dsync"
path = ".cargo/bin/dsync.rs"

[[bin]]
name = "deep-learning-web-rs"
path = "backend/main.rs"

[dependencies]
image = "0.24.5"
imageproc = "0.23.0"
structopt = "0.3.26"
tensorflow = "0.19.1"
tensorflow-sys = { version = "0.22.1", features = ["runtime_linking"] }

actix-files = "0.6.0"
actix-http = "3.0.0"
actix-multipart = "0.4.0"
actix-web = "4.0.1"
dsync = "0"
futures-util = "0.3.21"
create-rust-app = {version="8", default-features = false, features=["plugin_dev", "plugin_auth", "plugin_container", "plugin_storage", "database_postgres", "backend_actix-web"]}
serde_json = "1.0.79"
tsync = "1"
anyhow = "1.0.68"
tch = "0.10.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.diesel]
default-features = false
features = ["postgres", "r2d2", "chrono"]
version = "2.0.0-rc.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full"]
version = "1"

[package]
default-run = "deep-learning-web-rs"
edition = "2021"
name = "deep-learning-web-rs"
publish = false
version = "0.1.0"
[profile.dev]
debug-assertions = true
